# CV-CUDA

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  bicubic_fix_todo.md  init_repo.sh  print_env.sh
bench/: BenchAdaptiveThreshold.cpp  BenchAverageBlur.cpp  BenchBilateralFilter.cpp  BenchComposite.cpp  BenchConv2D.cpp  BenchCopyMakeBorder.cpp  BenchCropFlipNormalizeReformat.cpp  BenchErase.cpp  BenchFlip.cpp  BenchGaussian.cpp  BenchHistogram.cpp  BenchJointBilateralFilter.cpp  BenchLaplacian.cpp  BenchMedianBlur.cpp  BenchMorphology.cpp  BenchPadAndStack.cpp  BenchPairwiseMatcher.cpp  BenchRotate.cpp  BenchUtils.hpp  BenchWarpAffine.cpp  BenchWarpPerspective.cpp  run_bench.py
ci/: build.sh  (+1 more)
docs/: CMakeLists.txt
docs/sphinx/: conf.py  datatypes.rst  docker_images.rst  generate_groups.py  getting_started.rst  index.rst  installation.rst  interoperability.rst  samples.rst  wsl2.rst
docs/sphinx/advanced/: make_operator.rst  object_cache.rst
docs/sphinx/content/: cvcuda_op.rst
docs/sphinx/content/code_snippets/: image.cpp  imagebatch.cpp  imagebatchvarshape.cpp  tensor.cpp  tensorbatch.cpp
docs/sphinx/interop/: cuda_python.rst  cupy.rst  numpy.rst  nvimgcodec.rst  pycuda.rst  pynvvideocodec.rst  pytorch.rst
docs/sphinx/modules/: c_api.rst  cpp_api.rst
docs/sphinx/modules/python/: auxiliary_types.rst  cache.rst  data_types.rst  index.rst  operators.rst  utilities.rst
docs/sphinx/relnotes/: v0.16.0-beta.rst
docs/sphinx/samples/: applications.rst  common.rst  operators.rst
docs/sphinx/samples/applications/: classification.rst  hello_world.rst  object_detection.rst  segmentation.rst
docs/sphinx/samples/operators/: gaussian.rst  label.rst  reformat.rst  resize.rst  stack.rst
docs/sphinx/templates/: custom.css
python/: CMakeLists.txt  MANIFEST.in  README.md.in  __init__.py.in  build_wheels.sh  pyproject.toml.in  setup.py.in
python/common/: CMakeLists.txt
python/cpack/: debian_python_postinst.in
python/mod_cvcuda/: CMakeLists.txt  Main.cpp  exports.ldscript  gen_dtype_list.sh  gen_imgformat_list.sh
python/mod_cvcuda/include/nvcv/python/: Array.hpp  CAPI.hpp  Cache.hpp  Container.hpp  DataType.hpp  Fwd.hpp  Image.hpp  ImageBatchVarShape.hpp  ImageFormat.hpp  LockMode.hpp  Resource.hpp  ResourceGuard.hpp  Shape.hpp  Size.hpp  Stream.hpp  Tensor.hpp  TensorBatch.hpp
python/mod_cvcuda/nvcv/: Array.cpp  Array.hpp  CAPI.cpp  CAPI.hpp  CastUtils.hpp  ColorSpec.cpp  ColorSpec.hpp  Container.cpp  Container.hpp  DLPackUtils.cpp  DLPackUtils.hpp  DataType.hpp  Definitions.hpp  ExternalBuffer.cpp  ExternalBuffer.hpp  Image.cpp  Image.hpp  ImageBatch.cpp  ImageBatch.hpp  ImageFormat.hpp  Object.cpp  Object.hpp  Rect.cpp  Rect.hpp  Resource.cpp  Resource.hpp  Size.hpp  Stream.cpp  Stream.hpp  StreamStack.cpp  StreamStack.hpp  Tensor.cpp  Tensor.hpp  TensorBatch.cpp  TensorBatch.hpp
python/mod_cvcuda/operators/: OpAdaptiveThreshold.cpp  OpAdvCvtColor.cpp  OpAverageBlur.cpp  OpBilateralFilter.cpp  OpBndBox.cpp  OpBoxBlur.cpp  OpBrightnessContrast.cpp  OpCenterCrop.cpp  OpChannelReorder.cpp  OpColorTwist.cpp  OpComposite.cpp  OpConv2D.cpp  OpConvertTo.cpp  OpCopyMakeBorder.cpp  OpCropFlipNormalizeReformat.cpp  OpCustomCrop.cpp  OpCvtColor.cpp  OpErase.cpp  OpFindHomography.cpp  OpFlip.cpp  OpGammaContrast.cpp  OpGaussian.cpp  OpGaussianNoise.cpp  OpHQResize.cpp  OpHistogram.cpp  OpHistogramEq.cpp  OpInpaint.cpp  OpJointBilateralFilter.cpp  OpLabel.cpp  OpLaplacian.cpp  OpMedianBlur.cpp  OpMinAreaRect.cpp  OpMinMaxLoc.cpp  OpMorphology.cpp  OpNonMaximumSuppression.cpp  OpNormalize.cpp  OpOSD.cpp  OpPadAndStack.cpp  OpPairwiseMatcher.cpp  OpPillowResize.cpp  (+11 more)
tests/cvcuda/python/: CMakeLists.txt  cvcuda_test_python.in  cvcuda_util.py  test_adaptivethresholdtype.py  test_bordertype.py  test_cache.py  test_datatype.py  test_image.py  test_imgbatchvarshape.py  test_imgformat.py  test_import_order.py  test_interptype.py  test_multi_stream.py  test_multi_threading.py  test_opadaptivethreshold.py  test_opadvcvtcolor.py  test_opaverageblur.py  test_opbilateralfilter.py  test_opbndbox.py  test_opboxblur.py  test_opbrightnesscontrast.py  test_opcentercrop.py  test_opchannelreorder.py  test_opcolortwist.py  test_opcomposite.py  test_opconv2d.py  test_opconvertto.py  test_opcopymakeborder.py  test_opcopymakeborder_varshape.py  test_opcropflipnormalizereformat.py  test_opcustomcrop.py  test_opcvtcolor.py  test_operase.py  test_operase_varshape.py  test_opfindhomography.py  test_opflip.py  test_opgammacontrast.py  test_opgaussian.py  test_opgaussiannoise.py  test_ophistogram.py  (+34 more)
tests/cvcuda/system/: CMakeLists.txt  CvtColorUtils.cpp  CvtColorUtils.hpp  TestOpAdaptiveThreshold.cpp  TestOpAverageBlur.cpp  TestOpBilateralFilter.cpp  TestOpBndBox.cpp  TestOpBndBox_Smoke.cpp  TestOpBoxBlur.cpp  TestOpBoxBlur_Smoke.cpp  TestOpBrightnessContrast.cpp  TestOpCenterCrop.cpp  TestOpColorTwist.cpp  TestOpComposite.cpp  TestOpConv2D.cpp  TestOpCopyMakeBorder.cpp  TestOpCropFlipNormalizeReformat.cpp  TestOpCustomCrop.cpp  TestOpCvtColor.cpp  TestOpFindHomography.cpp  TestOpGaussian.cpp  TestOpHQResize.cpp  TestOpHistogramEq.cpp  TestOpInpaint.cpp  TestOpJointBilateralFilter.cpp  TestOpLabel.cpp  TestOpLaplacian.cpp  TestOpMedianBlur.cpp  TestOpMinAreaRect.cpp  TestOpMinMaxLoc.cpp  TestOpMorphology.cpp  TestOpNonMaximumSuppression.cpp  TestOpNormalize.cpp  TestOpOSD.cpp  TestOpOSD_Smoke.cpp  TestOpPadAndStack.cpp  TestOpPillowResize.cpp  TestOpRandomResizedCrop.cpp  TestOpReformat.cpp  TestOpResize.cpp  (+7 more)
tests/nvcv_types/: CMakeLists.txt
tests/nvcv_types/cudatools_system/: CMakeLists.txt  DeviceMathWrappers.cu  DeviceTensorBatchWrap.cu  TestInterpolationWrap.cpp  TestMathOps.cpp  TestMathWrappers.cpp  TestRangeCast.cpp  TestStaticCast.cpp  TestTensorBatchWrap.cpp  TestTypeTraits.cpp
tests/nvcv_types/cudatools_unit/: CMakeLists.txt  TestLegacyHelpers.cpp
tests/nvcv_types/system/: CMakeLists.txt  TestTensor.cpp
tests/nvcv_types/unit/: CMakeLists.txt  TestAllocator.cpp  TestDataLayout.cpp  TestImageFormat.cpp  TestTensorLayout.cpp
(+161 files in other folders)
